--- a/photos/templates/todays-photos.html
+++ b/photos/templates/todays-photos.html
@@ -5,12 +5,25 @@
 <div class="container">
 
     <!-- Looping through photos  -->
-    {% for news_item in news %}
+    {% for photos_item in photos %}
+
+        <div class="row">
+          
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <h2 class="text-center"> {{ photos_item.title }} </h2>
+            </div>
+        
+           
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
+            </div>
+        
+        </div>
 
     <div class="row">
         <!-- displaying photos -->
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <h2 class="text-center"> {{ photo_item.title }} </h2>
+            <h2 class="text-center"> {{ photos_item.title }} </h2>
         </div>
 
     </div>
