--- a/photos/templates/all-photos/today-photos.html
+++ b/photos/templates/all-photos/today-photos.html
@@ -1,5 +1,39 @@
-{%extends 'all-news/base.html'%}
+{%extends 'all-photos/base.html'%}
 
 {% block content %}
 {{block.super}}
 {% endblock %}
+
+<div class="container">
+
+    <!-- Looping through photos  -->
+    {% for photos_item in photos %}
+
+    <div class="row">
+
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h2 class="text-center"> {{ photos_item.title }} </h2>
+        </div>
+
+
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
+        </div>
+
+    </div>
+
+    <div class="row">
+        <!-- displaying photos -->
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h2 class="text-center"> {{ photos_item.title }} </h2>
+        </div>
+
+    </div>
+
+    {% empty %}
+    <div class="row">
+        <h2 class="text-center">There No photos</h2>
+    </div>
+    {% endfor %}
+
+</div>
