--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'newsToday' %}">Ricky's Gallery</a>
+                <a class="navbar-brand" href="{% url 'photosToday' %}">Ricky's Gallery</a>
             </div>
         
             <!-- Adding a search form  -->
