--- a/photos/templates/all-photos/today-photos.html
+++ b/photos/templates/all-photos/today-photos.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {{block.super}}
-{% endblock %}
+
 
 <div class="container">
 
@@ -17,7 +17,7 @@
 
 
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image">
+            <img src="{{photos_item.pic_image.url}}" class="img-responsive" alt="Image">
         </div>
 
     </div>
@@ -37,3 +37,4 @@
     {% endfor %}
 
 </div>
+{% endblock %}
