--- a/photos/templates/all-photos/base.html
+++ b/photos/templates/all-photos/base.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body style ="background: url(https://wallpapercave.com/wp/LBMmn3U.jpg); background-size: 100% 100%;" >
     {% include "navbar.html" %}
 
     {% block content %} <h1 class='text-center'>Photos for {{date|date:"l d-F Y"}}</h1> {%endblock%}
